--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ packages= ["src/UnimiLibrary"]
 
 [project]
 name = "Unimi-Library-CLI"
-version = "1.1.0"
+version = "1.1.1"
 authors = [
   { name="Albertobilack", email="" },
 ]
@@ -22,5 +22,6 @@ dependencies = [
   "beautifulsoup4>=4.12.3",
   "pytz>=2024.1",
   "requests>=2.32.3",
+  "lxml>=5.1.0"
 ]
 
